{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 7133,
  "lineage": "81a02672-3438-1e8e-bdf6-712ecf84e3f2",
  "resources": [
    {
      "module": "module.gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397742222:internet-gateway/igw-0be556b884d9b0c19",
            "id": "igw-0be556b884d9b0c19",
            "owner_id": "767397742222",
            "tags": {
              "Name": "gw-flipeon",
              "ProjectGroup": "grp-flipeon-dev"
            },
            "tags_all": {
              "Name": "gw-flipeon",
              "ProjectGroup": "grp-flipeon-dev"
            },
            "vpc_id": "vpc-0b8cbea029c93c563"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.gateway",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397742222:route-table/rtb-05d7813d83aa30e43",
            "id": "rtb-05d7813d83aa30e43",
            "owner_id": "767397742222",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0be556b884d9b0c19",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b8cbea029c93c563"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gateway.aws_internet_gateway.gw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d343b7749ad21498",
            "route_table_id": "rtb-05d7813d83aa30e43",
            "subnet_id": "subnet-0109cf9a69bb0f1c4"
          },
          "dependencies": [
            "module.gateway.aws_internet_gateway.gw",
            "module.gateway.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7827a968db0c640",
            "route_table_id": "rtb-05d7813d83aa30e43",
            "subnet_id": "subnet-05e06403fd7750f32"
          },
          "dependencies": [
            "module.gateway.aws_internet_gateway.gw",
            "module.gateway.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a00c1c3616d84626",
            "route_table_id": "rtb-05d7813d83aa30e43",
            "subnet_id": "subnet-08692561d25381158"
          },
          "dependencies": [
            "module.gateway.aws_internet_gateway.gw",
            "module.gateway.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "application",
      "provider": "module.load_balancer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397742222:loadbalancer/app/lb-flipeon-dev/c70e815258dfaf0b",
            "arn_suffix": "app/lb-flipeon-dev/c70e815258dfaf0b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb-flipeon-dev-53444042.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397742222:loadbalancer/app/lb-flipeon-dev/c70e815258dfaf0b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb-flipeon-dev",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05f8819fa1c7eb5bb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01d23aa744ba800ea"
              },
              {
                "subnet_id": "subnet-060ab0b594e6a29db"
              },
              {
                "subnet_id": "subnet-0b41626a4ac6fb60c"
              }
            ],
            "subnets": [
              "subnet-01d23aa744ba800ea",
              "subnet-060ab0b594e6a29db",
              "subnet-0b41626a4ac6fb60c"
            ],
            "tags": {
              "Name": "flipeon-lb-dev",
              "ProjectGroup": "grp-flipeon-dev"
            },
            "tags_all": {
              "Name": "flipeon-lb-dev",
              "ProjectGroup": "grp-flipeon-dev"
            },
            "vpc_id": "vpc-0b8cbea029c93c563",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.logs_bucket.aws_s3_bucket.bucket",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.ecs"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http2",
      "provider": "module.load_balancer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397742222:listener/app/lb-flipeon-dev/c70e815258dfaf0b/ced264da422458c8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:767397742222:targetgroup/tg-lb-flipeon-dev/38da65fe3ce02a09",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397742222:listener/app/lb-flipeon-dev/c70e815258dfaf0b/ced264da422458c8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:767397742222:loadbalancer/app/lb-flipeon-dev/c70e815258dfaf0b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.application",
            "module.load_balancer.aws_lb_target_group.application",
            "module.logs_bucket.aws_s3_bucket.bucket",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.ecs"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "application",
      "provider": "module.load_balancer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397742222:targetgroup/tg-lb-flipeon-dev/38da65fe3ce02a09",
            "arn_suffix": "targetgroup/tg-lb-flipeon-dev/38da65fe3ce02a09",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397742222:targetgroup/tg-lb-flipeon-dev/38da65fe3ce02a09",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:767397742222:loadbalancer/app/lb-flipeon-dev/c70e815258dfaf0b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-lb-flipeon-dev",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b8cbea029c93c563"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397742222:subnet/subnet-0b41626a4ac6fb60c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b41626a4ac6fb60c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397742222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-0",
              "ProjectGroup": "grp-flipeon-dev"
            },
            "tags_all": {
              "Name": "private-subnet-0",
              "ProjectGroup": "grp-flipeon-dev"
            },
            "vpc_id": "vpc-0b8cbea029c93c563"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397742222:subnet/subnet-01d23aa744ba800ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d23aa744ba800ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397742222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1",
              "ProjectGroup": "grp-flipeon-dev"
            },
            "tags_all": {
              "Name": "private-subnet-1",
              "ProjectGroup": "grp-flipeon-dev"
            },
            "vpc_id": "vpc-0b8cbea029c93c563"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397742222:subnet/subnet-060ab0b594e6a29db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060ab0b594e6a29db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397742222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2",
              "ProjectGroup": "grp-flipeon-dev"
            },
            "tags_all": {
              "Name": "private-subnet-2",
              "ProjectGroup": "grp-flipeon-dev"
            },
            "vpc_id": "vpc-0b8cbea029c93c563"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397742222:subnet/subnet-0109cf9a69bb0f1c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0109cf9a69bb0f1c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397742222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-0",
              "ProjectGroup": "grp-flipeon-dev"
            },
            "tags_all": {
              "Name": "public-subnet-0",
              "ProjectGroup": "grp-flipeon-dev"
            },
            "vpc_id": "vpc-0b8cbea029c93c563"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397742222:subnet/subnet-05e06403fd7750f32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e06403fd7750f32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397742222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1",
              "ProjectGroup": "grp-flipeon-dev"
            },
            "tags_all": {
              "Name": "public-subnet-1",
              "ProjectGroup": "grp-flipeon-dev"
            },
            "vpc_id": "vpc-0b8cbea029c93c563"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397742222:subnet/subnet-08692561d25381158",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08692561d25381158",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397742222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2",
              "ProjectGroup": "grp-flipeon-dev"
            },
            "tags_all": {
              "Name": "public-subnet-2",
              "ProjectGroup": "grp-flipeon-dev"
            },
            "vpc_id": "vpc-0b8cbea029c93c563"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397742222:vpc/vpc-0b8cbea029c93c563",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02af1d75d8fa8f91b",
            "default_route_table_id": "rtb-09bc89d3a9ab6453e",
            "default_security_group_id": "sg-0f22e00d845e9d3e6",
            "dhcp_options_id": "dopt-09df5fd0aaf9594f3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b8cbea029c93c563",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09bc89d3a9ab6453e",
            "owner_id": "767397742222"
          }
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397742222:security-group/sg-05f8819fa1c7eb5bb",
            "description": "Security group for ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f8819fa1c7eb5bb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-security-group",
            "name_prefix": "",
            "owner_id": "767397742222",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-security-group",
              "ProjectGroup": "grp-flipeon-dev"
            },
            "tags_all": {
              "Name": "ecs-security-group",
              "ProjectGroup": "grp-flipeon-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8cbea029c93c563"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397742222:security-group/sg-00b205a9e1fdeea01",
            "description": "Security group for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00b205a9e1fdeea01",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-security-group",
            "name_prefix": "",
            "owner_id": "767397742222",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-security-group",
              "ProjectGroup": "grp-flipeon-dev"
            },
            "tags_all": {
              "Name": "rds-security-group",
              "ProjectGroup": "grp-flipeon-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8cbea029c93c563"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}